[tool.poetry]
name = "prefect-baseball-etl"
version = "0.1.0"
description = "ETL Workflow Sample for prefect and baseball."
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prefect = "^0.12.6"
pandas = "^1.1.0"
click = "^7.1.2"
python-json-logger = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
